### Added - ポイントカード自動作成追加

--- a/public/default/i18n/common/ja.json
+++ b/public/default/i18n/common/ja.json
@@ -79,6 +79,10 @@
                 "searchMyReservations": "予約を検索しています",
                 "searchMyMemberships": "メンバーシップを検索しています",
                 "searchMyPaymentCards": "ポイントカードを検索しています"
+            },
+            "Product": {
+                "search": "プロダクトを検索しています",
+                "searchOffers": "プロダクトオファーを検索しています"
             }
         }
     },
